<resources>
    <string name="app_name">Image</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_textView">선택을 시작하겠습니까?</string>
    <string name="text_switch">시작함</string>
    <string name="text_radioGroup">좋아하는 안드로이드 버전은?</string>
    <string name="text_radioButton1">젤리빈(4.3)</string>
    <string name="text_radioButton2">키캣(4.4)</string>
    <string name="text_radioButton3">롤리팝(5.0)</string>
    <string name="text_button1">종료</string>
    <string name="text_button2">처음으로</string>

</resources>
