<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/text_textView" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"/>
    <Switch
        android:id="@+id/switch1"
        android:text="@string/text_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:text="@string/text_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">
    <RadioButton
        android:id="@+id/radioButton1"
        android:text="@string/text_radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioButton
        android:id="@+id/radioButton2"
        android:text="@string/text_radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioButton
        android:id="@+id/radioButton3"
        android:text="@string/text_radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </RadioGroup>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/button1"
        android:text="@string/text_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button2"
        android:text="@string/text_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
